Fix overflow issue

--- a/src/Cities/CityTile/CityTile.css
+++ b/src/Cities/CityTile/CityTile.css
@@ -31,4 +31,5 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  padding-bottom: 0.08em;
 }
